Opened 15 years ago

Closed 15 years ago

#4092 closed bug (fixed)

UserlandFS not buildable with block cache / block cache transaction tracing enabled

Reported by: anevilyak Owned by: anevilyak
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

With either of the block cache tracing options enabled, userlandfs fails to link its library due to not finding the trace entry symbols. This should probably be reworked to not include tracing when not building the objects for the kernel.

Change History (2)

comment:1 by anevilyak, 15 years ago

Owner: changed from bonefish to anevilyak
Status: newassigned

comment:2 by anevilyak, 15 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev31525

Note: See TracTickets for help on using tickets.